<resources>
    <string name="app_name">BasicFactTesting</string>
    <string name="test_lifecycle">Test lifecycle</string>
    <string name="test_event_dispatch">test event dispatch</string>
    <string name="test_nested_scroll">test nested scroll</string>
    <string name="test_float_window">test float window</string>
    <string name="test_intent">test intent</string>
    <string name="test_task">test task</string>
    <string name="test_fragment">test fragment</string>
    <string name="test_view">test view</string>
    <string name="test_animator">test animator</string>
    <string name="test_service">test service</string>
    <string name="test_jetpack">test jetpack</string>
    <string name="test_status">test status</string>
    <string name="relearn_android_2019_kunminx">Relearn-Android © 2019 KunMinX</string>
    <string name="jump_to_fragment_two">跳转到Fragment Two</string>
    <string name="jump_to_fragment_three">跳转到Fragment Three</string>
</resources>
